WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
260609
[WGSL] i32, u32, f32 and bool should not be keywords
https://bugs.webkit.org/show_bug.cgi?id=260609
Summary
[WGSL] i32, u32, f32 and bool should not be keywords
Tadeu Zagallo
Reported
2023-08-23 06:47:12 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-08-23 06:47:27 PDT
<
rdar://problem/114320714
>
Tadeu Zagallo
Comment 2
2023-08-23 06:55:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16972
EWS
Comment 3
2023-08-28 01:39:17 PDT
Committed
267346@main
(25fd3e2899f5): <
https://commits.webkit.org/267346@main
> Reviewed commits have been landed. Closing PR #16972 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug