[WGSL] i32, u32, f32 and bool should not be keywords https://bugs.webkit.org/show_bug.cgi?id=260609 rdar://114320714

Reviewed by Dan Glastonbury.

The first of a series of patches to simplify things as the AST should not be aware
of what is or isn't a type. This starts by simply removing the keywords for the
primitive types, which were barely used to begin with: the lexer transformed the
identifier into a keyword, but the parser turned it back into an identifier.

* Source/WebGPU/WGSL/Lexer.cpp:
(WGSL::Lexer<T>::lex):
* Source/WebGPU/WGSL/Parser.cpp:
(WGSL::Parser<Lexer>::parseTypeName):
(WGSL::Parser<Lexer>::parsePrimaryExpression):
* Source/WebGPU/WGSL/Token.cpp:
(WGSL::toString):
* Source/WebGPU/WGSL/Token.h:

Canonical link: https://commits.webkit.org/267346@main